syntax = "proto3";

option csharp_namespace = "Seguimiento.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";


service Operation {
  
  rpc CreateOperation (CreateOperationRequest) returns (OperationDTO);
  rpc GetOperation (GetRequest) returns (NullableOperationDTO);
  rpc GetAllOperations (google.protobuf.Empty) returns (Operations);
  rpc UpdateOperation(OperationDTO) returns (google.protobuf.Empty);
  rpc DeleteOperation(DeleteRequest) returns (google.protobuf.Empty);
}



message Operations{
	repeated OperationDTO items = 1;
}

message NullableOperationDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		OperationDTO operation = 2;
	}
}

message CreateOperationRequest{
	string name = 1;
    string id =2;
    string Description=3;
	string code = 4;
}